basic.output
Nonterminals useless in grammar

   struct_declaration_list
   struct_declaration
   struct_declarator_list
   struct_declarator


Terminals unused in grammar

   Operator
   Operator_ref
   Operator_deref
   Keyword
   Keyword_case
   Keyword_default
   Keyword_if
   Keyword_else
   Keyword_switch
   Keyword_while
   Keyword_do
   Keyword_for
   Keyword_continue
   Keyword_break
   Keyword_return
   Punctuator


Rules useless in grammar

  159 struct_specifier: Keyword_struct Identifier Punctuator_cur_open struct_declaration_list Punctuator_cur_close
  160                 | Keyword_struct Punctuator_cur_open struct_declaration_list Punctuator_cur_close

  161 struct_declaration_list: struct_declaration
  162                        | struct_declaration_list struct_declaration

  163 struct_declaration: specifier_qualifier_list struct_declaration_list

  164 struct_declarator_list: struct_declarator
  165                       | struct_declarator_list Operator_comma struct_declarator

  166 struct_declarator: declarator


State 7 conflicts: 4 reduce/reduce
State 50 conflicts: 1 shift/reduce
State 64 conflicts: 1 reduce/reduce
State 65 conflicts: 1 reduce/reduce
State 66 conflicts: 1 reduce/reduce
State 67 conflicts: 1 reduce/reduce
State 68 conflicts: 1 reduce/reduce
State 69 conflicts: 1 reduce/reduce
State 70 conflicts: 1 reduce/reduce
State 203 conflicts: 2 reduce/reduce
State 232 conflicts: 3 reduce/reduce


Grammar

    0 $accept: ROOT $end

    1 primary_EXPR: Identifier
    2             | Constant
    3             | String
    4             | Punctuator_par_open EXPR Punctuator_par_close

    5 Constant: Constant_int
    6         | Constant_char
    7         | Constant_double
    8         | Constant_float
    9         | Constant_long_double

   10 postfix_EXPR: primary_EXPR
   11             | postfix_EXPR Punctuator_squ_open EXPR Punctuator_squ_close
   12             | postfix_EXPR Punctuator_par_open Punctuator_par_close
   13             | postfix_EXPR Punctuator_par_open argument_EXPR_list Punctuator_par_close
   14             | postfix_EXPR Operator_access Identifier
   15             | postfix_EXPR Operator_deref_access Identifier
   16             | postfix_EXPR Operator_addadd
   17             | postfix_EXPR Operator_subsub

   18 argument_EXPR_list: assignment_EXPR
   19                   | argument_EXPR_list Operator_comma assignment_EXPR

   20 unary_EXPR: postfix_EXPR
   21           | Operator_addadd unary_EXPR
   22           | Operator_subsub unary_EXPR
   23           | unary_operator cast_EXPR
   24           | Operator_sizeof unary_EXPR
   25           | Operator_sizeof Punctuator_par_open type_name Punctuator_par_close

   26 unary_operator: Operator_bit_and
   27               | Operator_mul
   28               | Operator_add
   29               | Operator_sub
   30               | Operator_bit_not
   31               | Operator_not

   32 type_name: Keyword_void
   33          | Keyword_char
   34          | Keyword_short
   35          | Keyword_int
   36          | Keyword_long
   37          | Keyword_float
   38          | Keyword_double

   39 cast_EXPR: unary_EXPR
   40          | Punctuator_par_open type_name Punctuator_par_close cast_EXPR

   41 multiplicative_EXPR: cast_EXPR
   42                    | multiplicative_EXPR Operator_mul cast_EXPR
   43                    | multiplicative_EXPR Operator_div cast_EXPR
   44                    | multiplicative_EXPR Operator_mod cast_EXPR

   45 additive_EXPR: multiplicative_EXPR
   46              | additive_EXPR Operator_add multiplicative_EXPR
   47              | additive_EXPR Operator_sub multiplicative_EXPR

   48 shift_EXPR: additive_EXPR
   49           | shift_EXPR Operator_sl additive_EXPR
   50           | shift_EXPR Operator_sr additive_EXPR

   51 relational_EXPR: shift_EXPR
   52                | relational_EXPR Operator_less shift_EXPR
   53                | relational_EXPR Operator_greater shift_EXPR
   54                | relational_EXPR Operator_less_equal shift_EXPR
   55                | relational_EXPR Operator_greater_equal shift_EXPR

   56 equality_EXPR: relational_EXPR
   57              | equality_EXPR Operator_equal relational_EXPR
   58              | equality_EXPR Operator_not_equal relational_EXPR

   59 BIT_AND_EXPR: equality_EXPR
   60             | BIT_AND_EXPR Operator_bit_and equality_EXPR

   61 BIT_XBIT_OR_EXPR: BIT_AND_EXPR
   62                 | BIT_XBIT_OR_EXPR Operator_bit_xor BIT_AND_EXPR

   63 BIT_OR_EXPR: BIT_XBIT_OR_EXPR
   64            | BIT_OR_EXPR Operator_bit_or BIT_XBIT_OR_EXPR

   65 LOGIC_AND_EXPR: BIT_OR_EXPR
   66               | LOGIC_AND_EXPR Operator_and BIT_OR_EXPR

   67 LOGIC_OR_EXPR: LOGIC_AND_EXPR
   68              | LOGIC_OR_EXPR Operator_or LOGIC_AND_EXPR

   69 conditional_EXPR: LOGIC_OR_EXPR
   70                 | LOGIC_OR_EXPR Operator_trinary_question EXPR Operator_trinary_choice conditional_EXPR

   71 assignment_EXPR: conditional_EXPR
   72                | unary_EXPR assignment assignment_EXPR

   73 assignment: Operator_assign
   74           | Operator_mul_assign
   75           | Operator_div_assign
   76           | Operator_mod_assign
   77           | Operator_add_assign
   78           | Operator_sub_assign
   79           | Operator_sl_assign
   80           | Operator_sr_assign
   81           | Operator_and_assign
   82           | Operator_xor_assign
   83           | Operator_or_assign

   84 EXPR: assignment_EXPR
   85     | EXPR Operator_comma assignment_EXPR

   86 constant_EXPR: conditional_EXPR

   87 declaration: declaration_specifiers init_declarator_list Punctuator_eol
   88            | declaration_specifiers Punctuator_eol

   89 declaration_specifiers: type_specifier
   90                       | type_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list Operator_comma init_declarator

   93 init_declarator: declarator
   94                | declarator Operator_assign initializer

   95 type_specifier: Keyword_void
   96               | Keyword_char
   97               | Keyword_short
   98               | Keyword_int
   99               | Keyword_long
  100               | Keyword_float
  101               | Keyword_double
  102               | Keyword_signed
  103               | Keyword_unsigned
  104               | struct_specifier
  105               | enum_specifier
  106               | typedef_name

  107 struct_specifier: Keyword_struct Identifier

  108 specifier_qualifier_list: type_specifier
  109                         | type_specifier specifier_qualifier_list

  110 enum_specifier: Keyword_enum Identifier
  111               | Keyword_enum Identifier Punctuator_cur_open enum_list Punctuator_cur_close
  112               | Keyword_enum Punctuator_cur_open enum_list Punctuator_cur_close

  113 enum_list: enumerator
  114          | enum_list Operator_comma enumerator

  115 enumerator: ENUM_CONST
  116           | ENUM_CONST Operator_assign constant_EXPR

  117 ENUM_CONST: Identifier

  118 declarator: direct_declarator
  119           | pointer direct_declarator

  120 direct_declarator: Identifier
  121                  | Punctuator_par_open declarator Punctuator_par_close
  122                  | direct_declarator Punctuator_squ_open Punctuator_squ_close
  123                  | direct_declarator Punctuator_squ_open constant_EXPR Punctuator_squ_close
  124                  | direct_declarator Punctuator_par_open parameter_type_list Punctuator_par_close
  125                  | direct_declarator Punctuator_par_open identifier_list Punctuator_par_close
  126                  | direct_declarator Punctuator_par_open Punctuator_par_close

  127 pointer: Operator_mul
  128        | Operator_mul pointer

  129 parameter_type_list: parameter_list

  130 parameter_list: parameter_declaration
  131               | parameter_list Operator_comma parameter_declaration

  132 parameter_declaration: declaration_specifiers declarator
  133                      | declaration_specifiers
  134                      | declaration_specifiers abstract_declarator

  135 identifier_list: Identifier
  136                | identifier_list Operator_comma Identifier

  137 type_name: specifier_qualifier_list
  138          | specifier_qualifier_list abstract_declarator

  139 abstract_declarator: pointer
  140                    | pointer direct_abstract_declarator
  141                    | direct_abstract_declarator

  142 direct_abstract_declarator: Punctuator_par_open abstract_declarator Punctuator_par_close
  143                           | direct_abstract_declarator Punctuator_squ_open constant_EXPR Punctuator_squ_close
  144                           | Punctuator_squ_open constant_EXPR Punctuator_squ_close
  145                           | direct_abstract_declarator Punctuator_squ_open Punctuator_squ_close
  146                           | Punctuator_squ_open Punctuator_squ_close
  147                           | direct_abstract_declarator Punctuator_par_open parameter_type_list Punctuator_par_close
  148                           | Punctuator_par_open parameter_type_list Punctuator_par_close
  149                           | direct_abstract_declarator Punctuator_par_open Punctuator_par_close
  150                           | Punctuator_par_open Punctuator_par_close

  151 typedef_name: Identifier

  152 initializer: assignment_EXPR
  153            | Punctuator_cur_open initializer_list Punctuator_cur_close
  154            | Punctuator_cur_open initializer_list Operator_comma Punctuator_cur_close

  155 initializer_list: initializer
  156                 | initializer_list Operator_comma initializer

  157 ROOT: EXPR
  158     | declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
Constant_int (258) 5
Constant_char (259) 6
Constant_double (260) 7
Constant_float (261) 8
Constant_long_double (262) 9
String (263) 3
Identifier (264) 1 14 15 107 110 111 117 120 135 136 151
Operator (265)
Operator_add (266) 28 46
Operator_sub (267) 29 47
Operator_addadd (268) 16 21
Operator_subsub (269) 17 22
Operator_mul (270) 27 42 127 128
Operator_div (271) 43
Operator_mod (272) 44
Operator_and (273) 66
Operator_or (274) 68
Operator_not (275) 31
Operator_assign (276) 73 94 116
Operator_equal (277) 57
Operator_not_equal (278) 58
Operator_greater (279) 53
Operator_less (280) 52
Operator_greater_equal (281) 55
Operator_less_equal (282) 54
Operator_bit_and (283) 26 60
Operator_bit_or (284) 64
Operator_bit_not (285) 30
Operator_bit_xor (286) 62
Operator_sl (287) 49
Operator_sr (288) 50
Operator_add_assign (289) 77
Operator_sub_assign (290) 78
Operator_mul_assign (291) 74
Operator_div_assign (292) 75
Operator_mod_assign (293) 76
Operator_and_assign (294) 81
Operator_or_assign (295) 83
Operator_xor_assign (296) 82
Operator_sr_assign (297) 80
Operator_sl_assign (298) 79
Operator_ref (299)
Operator_deref (300)
Operator_access (301) 14
Operator_deref_access (302) 15
Operator_sizeof (303) 24 25
Operator_trinary_question (304) 70
Operator_trinary_choice (305) 70
Operator_comma (306) 19 85 92 114 131 136 154 156
Keyword (307)
Keyword_void (308) 32 95
Keyword_char (309) 33 96
Keyword_short (310) 34 97
Keyword_int (311) 35 98
Keyword_long (312) 36 99
Keyword_float (313) 37 100
Keyword_double (314) 38 101
Keyword_signed (315) 102
Keyword_unsigned (316) 103
Keyword_case (317)
Keyword_default (318)
Keyword_if (319)
Keyword_else (320)
Keyword_switch (321)
Keyword_while (322)
Keyword_do (323)
Keyword_for (324)
Keyword_continue (325)
Keyword_break (326)
Keyword_return (327)
Keyword_enum (328) 110 111 112
Keyword_struct (329) 107
Punctuator (330)
Punctuator_eol (331) 87 88
Punctuator_par_open (332) 4 12 13 25 40 121 124 125 126 142 147 148
    149 150
Punctuator_par_close (333) 4 12 13 25 40 121 124 125 126 142 147 148
    149 150
Punctuator_squ_open (334) 11 122 123 143 144 145 146
Punctuator_squ_close (335) 11 122 123 143 144 145 146
Punctuator_cur_open (336) 111 112 153 154
Punctuator_cur_close (337) 111 112 153 154


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
primary_EXPR (84)
    on left: 1 2 3 4, on right: 10
Constant (85)
    on left: 5 6 7 8 9, on right: 2
postfix_EXPR (86)
    on left: 10 11 12 13 14 15 16 17, on right: 11 12 13 14 15 16 17
    20
argument_EXPR_list (87)
    on left: 18 19, on right: 13 19
unary_EXPR (88)
    on left: 20 21 22 23 24 25, on right: 21 22 24 39 72
unary_operator (89)
    on left: 26 27 28 29 30 31, on right: 23
type_name (90)
    on left: 32 33 34 35 36 37 38 137 138, on right: 25 40
cast_EXPR (91)
    on left: 39 40, on right: 23 40 41 42 43 44
multiplicative_EXPR (92)
    on left: 41 42 43 44, on right: 42 43 44 45 46 47
additive_EXPR (93)
    on left: 45 46 47, on right: 46 47 48 49 50
shift_EXPR (94)
    on left: 48 49 50, on right: 49 50 51 52 53 54 55
relational_EXPR (95)
    on left: 51 52 53 54 55, on right: 52 53 54 55 56 57 58
equality_EXPR (96)
    on left: 56 57 58, on right: 57 58 59 60
BIT_AND_EXPR (97)
    on left: 59 60, on right: 60 61 62
BIT_XBIT_OR_EXPR (98)
    on left: 61 62, on right: 62 63 64
BIT_OR_EXPR (99)
    on left: 63 64, on right: 64 65 66
LOGIC_AND_EXPR (100)
    on left: 65 66, on right: 66 67 68
LOGIC_OR_EXPR (101)
    on left: 67 68, on right: 68 69 70
conditional_EXPR (102)
    on left: 69 70, on right: 70 71 86
assignment_EXPR (103)
    on left: 71 72, on right: 18 19 72 84 85 152
assignment (104)
    on left: 73 74 75 76 77 78 79 80 81 82 83, on right: 72
EXPR (105)
    on left: 84 85, on right: 4 11 70 85 157
constant_EXPR (106)
    on left: 86, on right: 116 123 143 144
declaration (107)
    on left: 87 88, on right: 158
declaration_specifiers (108)
    on left: 89 90, on right: 87 88 90 132 133 134
init_declarator_list (109)
    on left: 91 92, on right: 87 92
init_declarator (110)
    on left: 93 94, on right: 91 92
type_specifier (111)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106, on right:
    89 90 108 109
struct_specifier (112)
    on left: 107, on right: 104
specifier_qualifier_list (113)
    on left: 108 109, on right: 109 137 138
enum_specifier (114)
    on left: 110 111 112, on right: 105
enum_list (115)
    on left: 113 114, on right: 111 112 114
enumerator (116)
    on left: 115 116, on right: 113 114
ENUM_CONST (117)
    on left: 117, on right: 115 116
declarator (118)
    on left: 118 119, on right: 93 94 121 132
direct_declarator (119)
    on left: 120 121 122 123 124 125 126, on right: 118 119 122 123
    124 125 126
pointer (120)
    on left: 127 128, on right: 119 128 139 140
parameter_type_list (121)
    on left: 129, on right: 124 147 148
parameter_list (122)
    on left: 130 131, on right: 129 131
parameter_declaration (123)
    on left: 132 133 134, on right: 130 131
identifier_list (124)
    on left: 135 136, on right: 125 136
abstract_declarator (125)
    on left: 139 140 141, on right: 134 138 142
direct_abstract_declarator (126)
    on left: 142 143 144 145 146 147 148 149 150, on right: 140 141
    143 145 147 149
typedef_name (127)
    on left: 151, on right: 106
initializer (128)
    on left: 152 153 154, on right: 94 155 156
initializer_list (129)
    on left: 155 156, on right: 153 154 156
ROOT (130)
    on left: 157 158, on right: 0


State 0

    0 $accept: . ROOT $end

    Constant_int          shift, and go to state 1
    Constant_char         shift, and go to state 2
    Constant_double       shift, and go to state 3
    Constant_float        shift, and go to state 4
    Constant_long_double  shift, and go to state 5
    String                shift, and go to state 6
    Identifier            shift, and go to state 7
    Operator_add          shift, and go to state 8
    Operator_sub          shift, and go to state 9
    Operator_addadd       shift, and go to state 10
    Operator_subsub       shift, and go to state 11
    Operator_mul          shift, and go to state 12
    Operator_not          shift, and go to state 13
    Operator_bit_and      shift, and go to state 14
    Operator_bit_not      shift, and go to state 15
    Operator_sizeof       shift, and go to state 16
    Keyword_void          shift, and go to state 17
    Keyword_char          shift, and go to state 18
    Keyword_short         shift, and go to state 19
    Keyword_int           shift, and go to state 20
    Keyword_long          shift, and go to state 21
    Keyword_float         shift, and go to state 22
    Keyword_double        shift, and go to state 23
    Keyword_signed        shift, and go to state 24
    Keyword_unsigned      shift, and go to state 25
    Keyword_enum          shift, and go to state 26
    Keyword_struct        shift, and go to state 27
    Punctuator_par_open   shift, and go to state 28

    primary_EXPR            go to state 29
    Constant                go to state 30
    postfix_EXPR            go to state 31
    unary_EXPR              go to state 32
    unary_operator          go to state 33
    cast_EXPR               go to state 34
    multiplicative_EXPR     go to state 35
    additive_EXPR           go to state 36
    shift_EXPR              go to state 37
    relational_EXPR         go to state 38
    equality_EXPR           go to state 39
    BIT_AND_EXPR            go to state 40
    BIT_XBIT_OR_EXPR        go to state 41
    BIT_OR_EXPR             go to state 42
    LOGIC_AND_EXPR          go to state 43
    LOGIC_OR_EXPR           go to state 44
    conditional_EXPR        go to state 45
    assignment_EXPR         go to state 46
    EXPR                    go to state 47
    declaration             go to state 48
    declaration_specifiers  go to state 49
    type_specifier          go to state 50
    struct_specifier        go to state 51
    enum_specifier          go to state 52
    typedef_name            go to state 53
    ROOT                    go to state 54


State 1

    5 Constant: Constant_int .

    $default  reduce using rule 5 (Constant)


State 2

    6 Constant: Constant_char .

    $default  reduce using rule 6 (Constant)


State 3

    7 Constant: Constant_double .

    $default  reduce using rule 7 (Constant)


State 4

    8 Constant: Constant_float .

    $default  reduce using rule 8 (Constant)


State 5

    9 Constant: Constant_long_double .

    $default  reduce using rule 9 (Constant)


State 6

    3 primary_EXPR: String .

    $default  reduce using rule 3 (primary_EXPR)


State 7

    1 primary_EXPR: Identifier .
  151 typedef_name: Identifier .

    Identifier            reduce using rule 151 (typedef_name)
    Operator_mul          reduce using rule 1 (primary_EXPR)
    Operator_mul          [reduce using rule 151 (typedef_name)]
    Keyword_void          reduce using rule 151 (typedef_name)
    Keyword_char          reduce using rule 151 (typedef_name)
    Keyword_short         reduce using rule 151 (typedef_name)
    Keyword_int           reduce using rule 151 (typedef_name)
    Keyword_long          reduce using rule 151 (typedef_name)
    Keyword_float         reduce using rule 151 (typedef_name)
    Keyword_double        reduce using rule 151 (typedef_name)
    Keyword_signed        reduce using rule 151 (typedef_name)
    Keyword_unsigned      reduce using rule 151 (typedef_name)
    Keyword_enum          reduce using rule 151 (typedef_name)
    Keyword_struct        reduce using rule 151 (typedef_name)
    Punctuator_eol        reduce using rule 151 (typedef_name)
    Punctuator_par_open   reduce using rule 1 (primary_EXPR)
    Punctuator_par_open   [reduce using rule 151 (typedef_name)]
    Punctuator_par_close  reduce using rule 1 (primary_EXPR)
    Punctuator_par_close  [reduce using rule 151 (typedef_name)]
    Punctuator_squ_open   reduce using rule 1 (primary_EXPR)
    Punctuator_squ_open   [reduce using rule 151 (typedef_name)]
    $default              reduce using rule 1 (primary_EXPR)


State 8

   28 unary_operator: Operator_add .

    $default  reduce using rule 28 (unary_operator)


State 9

   29 unary_operator: Operator_sub .

    $default  reduce using rule 29 (unary_operator)


State 10

   21 unary_EXPR: Operator_addadd . unary_EXPR

    Constant_int          shift, and go to state 1
    Constant_char         shift, and go to state 2
    Constant_double       shift, and go to state 3
    Constant_float        shift, and go to state 4
    Constant_long_double  shift, and go to state 5
    String                shift, and go to state 6
    Identifier            shift, and go to state 55
    Operator_add          shift, and go to state 8
    Operator_sub          shift, and go to state 9
    Operator_addadd       shift, and go to state 10
    Operator_subsub       shift, and go to state 11
    Operator_mul          shift, and go to state 12
    Operator_not          shift, and go to state 13
    Operator_bit_and      shift, and go to state 14
    Operator_bit_not      shift, and go to state 15
    Operator_sizeof       shift, and go to state 16
    Punctuator_par_open   shift, and go to state 56

    primary_EXPR    go to state 29
    Constant        go to state 30
    postfix_EXPR    go to state 31
    unary_EXPR      go to state 57
    unary_operator  go to state 33


State 11

   22 unary_EXPR: Operator_subsub . unary_EXPR

    Constant_int          shift, and go to state 1
    Constant_char         shift, and go to state 2
    Constant_double       shift, and go to state 3
    Constant_float        shift, and go to state 4
    Constant_long_double  shift, and go to state 5
    String                shift, and go to state 6
    Identifier            shift, and go to state 55
    Operator_add          shift, and go to state 8
    Operator_sub          shift, and go to state 9
    Operator_addadd       shift, and go to state 10
    Operator_subsub       shift, and go to state 11
    Operator_mul          shift, and go to state 12
    Operator_not          shift, and go to state 13
    Operator_bit_and      shift, and go to state 14
    Operator_bit_not      shift, and go to state 15
    Operator_sizeof       shift, and go to state 16
    Punctuator_par_open   shift, and go to state 56

    primary_EXPR    go to state 29
    Constant        go to state 30
    postfix_EXPR    go to state 31
    unary_EXPR      go to state 58
    unary_operator  go to state 33


State 12

   27 unary_operator: Operator_mul .

    $default  reduce using rule 27 (unary_operator)


State 13

   31 unary_operator: Operator_not .

    $default  reduce using rule 31 (unary_operator)


State 14

   26 unary_operator: Operator_bit_and .

    $default  reduce using rule 26 (unary_operator)


State 15

   30 unary_operator: Operator_bit_not .

    $default  reduce using rule 30 (unary_operator)


State 16

   24 unary_EXPR: Operator_sizeof . unary_EXPR
   25           | Operator_sizeof . Punctuator_par_open type_name Punctuator_par_close

    Constant_int          shift, and go to state 1
    Constant_char         shift, and go to state 2
    Constant_double       shift, and go to state 3
    Constant_float        shift, and go to state 4
    Constant_long_double  shift, and go to state 5
    String                shift, and go to state 6
    Identifier            shift, and go to state 55
    Operator_add          shift, and go to state 8
    Operator_sub          shift, and go to state 9
    Operator_addadd       shift, and go to state 10
    Operator_subsub       shift, and go to state 11
    Operator_mul          shift, and go to state 12
    Operator_not          shift, and go to state 13
    Operator_bit_and      shift, and go to state 14
    Operator_bit_not      shift, and go to state 15
    Operator_sizeof       shift, and go to state 16
    Punctuator_par_open   shift, and go to state 59

    primary_EXPR    go to state 29
    Constant        go to state 30
    postfix_EXPR    go to state 31
    unary_EXPR      go to state 60
    unary_operator  go to state 33


State 17

   95 type_specifier: Keyword_void .

    $default  reduce using rule 95 (type_specifier)


State 18

   96 type_specifier: Keyword_char .

    $default  reduce using rule 96 (type_specifier)


State 19

   97 type_specifier: Keyword_short .

    $default  reduce using rule 97 (type_specifier)


State 20

   98 type_specifier: Keyword_int .

    $default  reduce using rule 98 (type_specifier)


State 21

   99 type_specifier: Keyword_long .

    $default  reduce using rule 99 (type_specifier)


State 22

  100 type_specifier: Keyword_float .

    $default  reduce using rule 100 (type_specifier)


State 23

  101 type_specifier: Keyword_double .

    $default  reduce using rule 101 (type_specifier)


State 24

  102 type_specifier: Keyword_signed .

    $default  reduce using rule 102 (type_specifier)


State 25

  103 type_specifier: Keyword_unsigned .

    $default  reduce using rule 103 (type_specifier)


State 26

  110 enum_specifier: Keyword_enum . Identifier
  111               | Keyword_enum . Identifier Punctuator_cur_open enum_list Punctuator_cur_close
  112               | Keyword_enum . Punctuator_cur_open enum_list Punctuator_cur_close

    Identifier           shift, and go to state 61
    Punctuator_cur_open  shift, and go to state 62


State 27

  107 struct_specifier: Keyword_struct . Identifier

    Identifier  shift, and go to state 63


State 28

    4 primary_EXPR: Punctuator_par_open . EXPR Punctuator_par_close
   40 cast_EXPR: Punctuator_par_open . type_name Punctuator_par_close cast_EXPR

    Constant_int          shift, and go to state 1
    Constant_char         shift, and go to state 2
    Constant_double       shift, and go to state 3
    Constant_float        shift, and go to state 4
    Constant_long_double  shift, and go to state 5
    String                shift, and go to state 6
    Identifier            shift, and go to state 7
    Operator_add          shift, and go to state 8
    Operator_sub          shift, and go to state 9
    Operator_addadd       shift, and go to state 10
    Operator_subsub       shift, and go to state 11
    Operator_mul          shift, and go to state 12
    Operator_not          shift, and go to state 13
    Operator_bit_and      shift, and go to state 14
    Operator_bit_not      shift, and go to state 15
    Operator_sizeof       shift, and go to state 16
    Keyword_void          shift, and go to state 64
    Keyword_char          shift, and go to state 65
    Keyword_short         shift, and go to state 66
    Keyword_int           shift, and go to state 67
    Keyword_long          shift, and go to state 68
    Keyword_float         shift, and go to state 69
    Keyword_double        shift, and go to state 70
    Keyword_signed        shift, and go to state 24
    Keyword_unsigned      shift, and go to state 25
    Keyword_enum          shift, and go to state 26
    Keyword_struct        shift, and go to state 27
    Punctuator_par_open   shift, and go to state 28

    primary_EXPR              go to state 29
    Constant                  go to state 30
    postfix_EXPR              go to state 31
    unary_EXPR                go to state 32
    unary_operator            go to state 33
    type_name                 go to state 71
    cast_EXPR                 go to state 34
    multiplicative_EXPR       go to state 35
    additive_EXPR             go to state 36
    shift_EXPR                go to state 37
    relational_EXPR           go to state 38
    equality_EXPR             go to state 39
    BIT_AND_EXPR              go to state 40
    BIT_XBIT_OR_EXPR          go to state 41
    BIT_OR_EXPR               go to state 42
    LOGIC_AND_EXPR            go to state 43
    LOGIC_OR_EXPR             go to state 44
    conditional_EXPR          go to state 45
    assignment_EXPR           go to state 46
    EXPR                      go to state 72
    type_specifier            go to state 73
    struct_specifier          go to state 51
    specifier_qualifier_list  go to state 74
    enum_specifier            go to state 52
    typedef_name              go to state 53


State 29

   10 postfix_EXPR: primary_EXPR .

    $default  reduce using rule 10 (postfix_EXPR)


State 30

    2 primary_EXPR: Constant .

    $default  reduce using rule 2 (primary_EXPR)


State 31

   11 postfix_EXPR: postfix_EXPR . Punctuator_squ_open EXPR Punctuator_squ_close
   12             | postfix_EXPR . Punctuator_par_open Punctuator_par_close
   13             | postfix_EXPR . Punctuator_par_open argument_EXPR_list Punctuator_par_close
   14             | postfix_EXPR . Operator_access Identifier
   15             | postfix_EXPR . Operator_deref_access Identifier
   16             | postfix_EXPR . Operator_addadd
   17             | postfix_EXPR . Operator_subsub
   20 unary_EXPR: postfix_EXPR .

    Operator_addadd        shift, and go to state 75
    Operator_subsub        shift, and go to state 76
    Operator_access        shift, and go to state 77
    Operator_deref_access  shift, and go to state 78
    Punctuator_par_open    shift, and go to state 79
    Punctuator_squ_open    shift, and go to state 80

    $default  reduce using rule 20 (unary_EXPR)


State 32

   39 cast_EXPR: unary_EXPR .
   72 assignment_EXPR: unary_EXPR . assignment assignment_EXPR

    Operator_assign      shift, and go to state 81
    Operator_add_assign  shift, and go to state 82
    Operator_sub_assign  shift, and go to state 83
    Operator_mul_assign  shift, and go to state 84
    Operator_div_assign  shift, and go to state 85
    Operator_mod_assign  shift, and go to state 86
    Operator_and_assign  shift, and go to state 87
    Operator_or_assign   shift, and go to state 88
    Operator_xor_assign  shift, and go to state 89
    Operator_sr_assign   shift, and go to state 90
    Operator_sl_assign   shift, and go to state 91

    $default  reduce using rule 39 (cast_EXPR)

    assignment  go to state 92


State 33

   23 unary_EXPR: unary_operator . cast_EXPR

    Constant_int          shift, and go to state 1
    Constant_char         shift, and go to state 2
    Constant_double       shift, and go to state 3
    Constant_float        shift, and go to state 4
    Constant_long_double  shift, and go to state 5
    String                shift, and go to state 6
    Identifier            shift, and go to state 55
    Operator_add          shift, and go to state 8
    Operator_sub          shift, and go to state 9
    Operator_addadd       shift, and go to state 10
    Operator_subsub       shift, and go to state 11
    Operator_mul          shift, and go to state 12
    Operator_not          shift, and go to state 13
    Operator_bit_and      shift, and go to state 14
    Operator_bit_not      shift, and go to state 15
    Operator_sizeof       shift, and go to state 16
    Punctuator_par_open   shift, and go to state 28

    primary_EXPR    go to state 29
    Constant        go to state 30
    postfix_EXPR    go to state 31
    unary_EXPR      go to state 93
    unary_operator  go to state 33
    cast_EXPR       go to state 94


State 34

   41 multiplicative_EXPR: cast_EXPR .

    $default  reduce using rule 41 (multiplicative_EXPR)


State 35

   42 multiplicative_EXPR: multiplicative_EXPR . Operator_mul cast_EXPR
   43                    | multiplicative_EXPR . Operator_div cast_EXPR
   44                    | multiplicative_EXPR . Operator_mod cast_EXPR
   45 additive_EXPR: multiplicative_EXPR .

    Operator_mul  shift, and go to state 95
    Operator_div  shift, and go to state 96
    Operator_mod  shift, and go to state 97

    $default  reduce using rule 45 (additive_EXPR)


State 36

   46 additive_EXPR: additive_EXPR . Operator_add multiplicative_EXPR
   47              | additive_EXPR . Operator_sub multiplicative_EXPR
   48 shift_EXPR: additive_EXPR .

    Operator_add  shift, and go to state 98
    Operator_sub  shift, and go to state 99

    $default  reduce using rule 48 (shift_EXPR)


State 37

   49 shift_EXPR: shift_EXPR . Operator_sl additive_EXPR
   50           | shift_EXPR . Operator_sr additive_EXPR
   51 relational_EXPR: shift_EXPR .

    Operator_sl  shift, and go to state 100
    Operator_sr  shift, and go to state 101

    $default  reduce using rule 51 (relational_EXPR)


State 38

   52 relational_EXPR: relational_EXPR . Operator_less shift_EXPR
   53                | relational_EXPR . Operator_greater shift_EXPR
   54                | relational_EXPR . Operator_less_equal shift_EXPR
   55                | relational_EXPR . Operator_greater_equal shift_EXPR
   56 equality_EXPR: relational_EXPR .

    Operator_greater        shift, and go to state 102
    Operator_less           shift, and go to state 103
    Operator_greater_equal  shift, and go to state 104
    Operator_less_equal     shift, and go to state 105

    $default  reduce using rule 56 (equality_EXPR)


State 39

   57 equality_EXPR: equality_EXPR . Operator_equal relational_EXPR
   58              | equality_EXPR . Operator_not_equal relational_EXPR
   59 BIT_AND_EXPR: equality_EXPR .

    Operator_equal      shift, and go to state 106
    Operator_not_equal  shift, and go to state 107

    $default  reduce using rule 59 (BIT_AND_EXPR)


State 40

   60 BIT_AND_EXPR: BIT_AND_EXPR . Operator_bit_and equality_EXPR
   61 BIT_XBIT_OR_EXPR: BIT_AND_EXPR .

    Operator_bit_and  shift, and go to state 108

    $default  reduce using rule 61 (BIT_XBIT_OR_EXPR)


State 41

   62 BIT_XBIT_OR_EXPR: BIT_XBIT_OR_EXPR . Operator_bit_xor BIT_AND_EXPR
   63 BIT_OR_EXPR: BIT_XBIT_OR_EXPR .

    Operator_bit_xor  shift, and go to state 109

    $default  reduce using rule 63 (BIT_OR_EXPR)


State 42

   64 BIT_OR_EXPR: BIT_OR_EXPR . Operator_bit_or BIT_XBIT_OR_EXPR
   65 LOGIC_AND_EXPR: BIT_OR_EXPR .

    Operator_bit_or  shift, and go to state 110

    $default  reduce using rule 65 (LOGIC_AND_EXPR)


State 43

   66 LOGIC_AND_EXPR: LOGIC_AND_EXPR . Operator_and BIT_OR_EXPR
   67 LOGIC_OR_EXPR: LOGIC_AND_EXPR .

    Operator_and  shift, and go to state 111

    $default  reduce using rule 67 (LOGIC_OR_EXPR)


State 44

   68 LOGIC_OR_EXPR: LOGIC_OR_EXPR . Operator_or LOGIC_AND_EXPR
   69 conditional_EXPR: LOGIC_OR_EXPR .
   70                 | LOGIC_OR_EXPR . Operator_trinary_question EXPR Operator_trinary_choice conditional_EXPR

    Operator_or                shift, and go to state 112
    Operator_trinary_question  shift, and go to state 113

    $default  reduce using rule 69 (conditional_EXPR)


State 45

   71 assignment_EXPR: conditional_EXPR .

    $default  reduce using rule 71 (assignment_EXPR)


State 46

   84 EXPR: assignment_EXPR .

    $default  reduce using rule 84 (EXPR)


State 47

   85 EXPR: EXPR . Operator_comma assignment_EXPR
  157 ROOT: EXPR .

    Operator_comma  shift, and go to state 114

    $default  reduce using rule 157 (ROOT)


State 48

  158 ROOT: declaration .

    $default  reduce using rule 158 (ROOT)


State 49

   87 declaration: declaration_specifiers . init_declarator_list Punctuator_eol
   88            | declaration_specifiers . Punctuator_eol

    Identifier           shift, and go to state 115
    Operator_mul         shift, and go to state 116
    Punctuator_eol       shift, and go to state 117
    Punctuator_par_open  shift, and go to state 118

    init_declarator_list  go to state 119
    init_declarator       go to state 120
    declarator            go to state 121
    direct_declarator     go to state 122
    pointer               go to state 123


State 50

   89 declaration_specifiers: type_specifier .
   90                       | type_specifier . declaration_specifiers
